ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airfood-ingress
  namespace: airfood
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: frontend.airfood.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5173

    - host: backend.airfood.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
